--- a/index.html
+++ b/index.html
@@ -374,5 +374,5 @@ background-color: #FCF5C7;
 <input type="reset"><button class="save-btn">Save</button>
 </form>
 </body>
-<script src="flowScript.js"></script>
+<script src="script.js"></script>
 </script>
