--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@ background-color: #FCF5C7;
     color: #b39520;
     background-color: #ebffee;
 }
+#line2{
+    color: #b39520;
+}
 #div4 {
     display: inline-block;
     width:270px;
@@ -58,7 +61,8 @@ background-color: #FCF5C7;
         <input id="line" style="font-size: x-large;"class="tester" type="text" placeholder="Enter Flow Name" value="Untitled Flow">
 </div>
 <br>
-<p style="font-size: small;" style="font-family: Arial, Helvetica, sans-serif;">Temprorary Notes:</p>
+<p style="font-size: small;" style="font-family: Arial, Helvetica, sans-serif;" id="line2">When downloading a flow it will save as a .xlsx file. Move the file to google drive to open as a google sheet</p>
+<p style="font-size: small;" style="font-family: Arial, Helvetica, sans-serif;" id="line2">Temprorary Notes:</p>
 <textarea id="line" rows="8" cols="70" style="font-family: Arial, Helvetica, sans-serif;"></textarea>
 </h1>
 <body>
