--- a/index.html
+++ b/index.html
@@ -377,6 +377,16 @@ background-color: #FCF5C7;
 </div>
 <input type="reset"><button class="save-btn">Save</button>
 </form>
+
+    <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C855160NDD');
+</script>
 </body>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C855160NDD"></script>
+
 <script src="script.js"></script>
 </script>
