--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ background-color: #FCF5C7;
 <div class="option file-name">
         <input id="line" style="font-size: x-large;"class="tester" type="text" placeholder="Enter Flow Name" value="Untitled Flow">
 </div>
-<p style="font-size: small;" style="font-family: Arial, Helvetica, sans-serif;" id="line2">Use the "TAB" key to go to the next line</p>
+<p style="font-size: small;" style="font-family: Arial, Helvetica, sans-serif;" id="line2">Use the "TAB" or "ENTER" key to go to the next line</p>
 <p style="font-size: small;" style="font-family: Arial, Helvetica, sans-serif;" id="line2">When downloading a flow it will save as a .xlsx file. Move the file to google drive to open as a google sheet</p>
 <p style="font-size: small;" style="font-family: Arial, Helvetica, sans-serif;" id="line2">Temprorary Notes:</p>
 <textarea id="line" rows="8" cols="70" style="font-family: Arial, Helvetica, sans-serif;"></textarea>
